// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TechList> should render component 1`] = `
<div
  className="flatList"
  style={
    {
      "margin": 10,
    }
  }
>
  <div
    className="text"
  >
    <div>
      Test 1
    </div>
  </div>
  <div
    className="text"
  >
    <div>
      Test 2
    </div>
  </div>
  <div
    className="text"
  >
    <div>
      Test 3
    </div>
  </div>
</div>
`;

exports[`<TechList> should render component with props 1`] = `
<div
  className="flatList"
  style={
    {
      "margin": 10,
    }
  }
>
  <div
    className="text"
    style={
      {
        "fontSize": 20,
      }
    }
  >
    <div>
      Test 1
    </div>
  </div>
  <div
    className="text"
    style={
      {
        "fontSize": 20,
      }
    }
  >
    <div>
      Test 2
    </div>
  </div>
  <div
    className="text"
    style={
      {
        "fontSize": 20,
      }
    }
  >
    <div>
      Test 3
    </div>
  </div>
</div>
`;
